--- a/generators/controller.hbs
+++ b/generators/controller.hbs
@@ -1,5 +1,5 @@
 const httpStatus = require('http-status');
-const catchAsync = require('../utils/catchAsync');
+const catchAsync = require('../utils/catch-async');
 const {{camelCase name}}Service = require('../services/{{fileName}}.service');
 
 const get{{pascalCase name}} = catchAsync(async (req, res) => {
